--- a/functions/package.json
+++ b/functions/package.json
@@ -1,27 +1,26 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "main": "build/node/index.dart.js",
   "scripts": {
-    "build": "pub run build_runner build --output=build",
-    "watch": "pub run build_runner watch --output=build",
-
-    "preserve": "npm run build",
-    "serve": "firebase serve --only functions",
-
-    "predeploy": "npm run build",
+    "lint": "tslint --project tsconfig.json",
+    "build": "tsc",
+    "serve": "npm run build && firebase serve --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-
     "logs": "firebase functions:log"
   },
   "engines": {
     "node": "8"
   },
+  "main": "lib/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2",
     "firebase-functions-test": "^0.1.6"
   },
   "private": true
