--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
