Add UI and state management for getting auth token
- setup auth page for three states:
1. single sign in button
2. textfield, submit button, cancel button
3. verifying UI: progress indicator

* Configure state management and platform/http calls
- Actions: StoreAuthStep, StoreAuthToken, RetrieveProfile, StoreProfile
- Models: AppState (authStep, authToken), Profile
- Widgets: AuthPage, MainPage
- Middleware: _storeTokenAndRetrieveProfile, _launchAuthPage
- Services: GitHubService.retrieveProfile, LocalStorageService
- Reducers: _storeAuthStep, _storeAuthToken,  _storeProfile

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,13 @@
             "deviceId": "macOS"
         },
         {
+            "name": "macOS_rdt",
+            "request": "launch",
+            "type": "dart",
+            "program": "lib/main_rdt.dart",
+            "deviceId": "macOS"
+        },
+        {
             "name": "Web",
             "request": "launch",
             "type": "dart",
