--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   flutter_redux:
   redux_remote_devtools:
 
+  dio:
   url_launcher:
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
