--- a/functions/package.json
+++ b/functions/package.json
@@ -10,20 +10,24 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "main": "lib/index.js",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   },
   "devDependencies": {
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
-    "firebase-functions-test": "^0.1.6"
+    "@types/cors": "^2.8.6",
+    "@types/request-promise": "^4.1.46",
+    "@types/express": "^4.17.6",
+    "firebase-functions-test": "^0.2.1",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.5"
   },
   "private": true
 }
