Add AuthService for running the auth sequence
- used the oauth2 package to get an autorization url
- added AuthService to handle the auth sequence
- added actions and middleware to control auth sequence and update state
- ignored generated files and removed previuosly commited files
- updated UI to put Profile details in app bar and SIgn In in center
- added entitlements so app can act as a server for authorization
- updated tests

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ lib/generated_plugin_registrant.dart
 
 ######################### - my ignores 
 
+# generated files 
+*.g.dart
+
 # cloud functions 
 /functions/build/
 
